# viddeck

./: .gitignore  Cargo.toml  LICENSE  README.md  viddeck
.github/workflows/: release.yml
assets/: script.js  style.css
src/: assets.rs  cli.rs  ffmpeg.rs  handlers.rs  html.rs  main.rs  scanner.rs  state.rs
