[package]
name = "viddeck"
version = "0.2.2"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.0"
base64 = "0.21"
open = "5.0"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
futures-util = "0.3"
notify = "8.2.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
